--- a/README.rdoc
+++ b/README.rdoc
@@ -3,7 +3,7 @@
 Implementación del Modulo de Seguimiento que hace parte del Sistema de Información Integrado Comunidad Colciencias
 como proyecto de desarrollo para la asignatura "Ingenieria de Software 3" de la Universidad del Quindio.
 
-== Requerimientos:
+=== Requerimientos:
 
 * Ruby version
 
